--- a/public/015-filtr-4.html
+++ b/public/015-filtr-4.html
@@ -713,38 +713,55 @@
 								<h1>Стиральные машины</h1>
 							</div>
 							<div class="tags-slider-wrap">
-								<div class="swiper-container tags-slider-js">
-									<div class="swiper-wrapper">
-										<div class="swiper-slide">
-											<div class="sCatalog__tags-row row sTags-row-js">
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-												</div>
-												<div class="col-sm-auto d-block">
-													<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
-													</div>
+								<div class="tags-slider-js">
+									<div class="tag-wrapper">
+										<div class="sCatalog__tags-row row sTags-row-js">
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto d-none d-md-block"> 
+												<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="swiper-scrollbar d-md-none my-3"></div>
 								</div>
 							</div>
 							<div class="sCatalog__img d-none d-lg-flex"><img loading="lazy" src="img/@2x/sCatalog-baner-img.png" alt=""/>
@@ -2508,7 +2525,7 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="js/libs.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
