--- a/public/index.html
+++ b/public/index.html
@@ -808,10 +808,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -837,10 +839,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -866,10 +870,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -895,10 +901,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -924,10 +932,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -953,10 +963,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -982,10 +994,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1011,10 +1025,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1040,10 +1056,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1069,10 +1087,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1098,10 +1118,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1127,10 +1149,12 @@
 														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn active" href="#">
+															<svg class="icon icon-check ">
+																<use xlink:href="img/svg/sprite.svg#check"></use>
+															</svg><span class="prod-item__add-btn-toggle-text">в корзине</span></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -2414,7 +2438,7 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="js/libs.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
