--- a/public/01-about.html
+++ b/public/01-about.html
@@ -1410,7 +1410,7 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="js/libs.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
