--- a/public/015-filtr-3.html
+++ b/public/015-filtr-3.html
@@ -705,38 +705,55 @@
 								<h1>По запросу «Стиральная машина» в категории <span style="color: #FF8651;">Крупная бытовая техника</span> найдено 80 908 товаров </h1>
 							</div>
 							<div class="tags-slider-wrap">
-								<div class="swiper-container tags-slider-js">
-									<div class="swiper-wrapper">
-										<div class="swiper-slide">
-											<div class="sCatalog__tags-row row sTags-row-js">
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-												</div>
-												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-												</div>
-												<div class="col-sm-auto d-block">
-													<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
-													</div>
+								<div class="tags-slider-js">
+									<div class="tag-wrapper">
+										<div class="sCatalog__tags-row row sTags-row-js">
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+											</div>
+											<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+											</div>
+											<div class="col-auto d-none d-md-block"> 
+												<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="swiper-scrollbar d-md-none my-3"></div>
 								</div>
 							</div>
 							<div class="sCatalog__img d-none d-lg-flex"><img loading="lazy" src="img/@2x/sCatalog-baner-img.png" alt=""/>
@@ -959,10 +976,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -982,10 +1001,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1005,10 +1026,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1028,10 +1051,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1051,10 +1076,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1074,10 +1101,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1097,10 +1126,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1120,10 +1151,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1143,10 +1176,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1166,10 +1201,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1189,10 +1226,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1212,10 +1251,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1235,10 +1276,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1258,10 +1301,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1281,10 +1326,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1304,10 +1351,12 @@
 													<div class="prod-item__price">54 999 руб.
 													</div>
 												</div>
-												<div class="col-auto"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
-													<svg class="icon icon-plus ">
-														<use xlink:href="img/svg/sprite.svg#plus"></use>
-													</svg></a>
+												<div class="col-auto">
+													<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#modal-callback" data-fancybox="">
+														<svg class="icon icon-plus ">
+															<use xlink:href="img/svg/sprite.svg#plus"></use>
+														</svg><span class="prod-item__add-btn-toggle-text">в корзину</span></a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -1882,7 +1931,7 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="js/libs.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
